fixed issue with empty space on the right on mobile view

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@
   --tertiary-color: #202020;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Teko", sans-serif;
   background-color: var(--tertiary-color);
